# sparky-serenity

./: .env.dist  Cargo.toml  README.md  sparky.service
.github/workflows/: deploy.yml
sparky_macros/: Cargo.toml
sparky_macros/src/: lib.rs
src/: admin.rs  date.rs  discord.rs  edf.rs  error.rs  general.rs  handler.rs  help.rs  http.rs  macros.rs  main.rs  shadowrun.rs  state.rs  string.rs  utils.rs
src/edf/: mod.rs  songs.rs
src/kitsu/: greet.rs  mod.rs  parse.rs
src/shadowrun/: confirm.rs  mod.rs  plan.rs  remind.rs  roll.rs
src/vote/: mod.rs  start.rs
