[package]
name = "sparky"
version = "2.7.1"
authors = ["Paul Blouët <paul@paulblouet.fr>"]
edition = "2018"

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.26"
base64 = "0.12.0"
bincode = "1.2.1"
boolinator = "2.4.0"
chrono = "0.4.10"
chrono-tz = "0.5.1"
clap = "2.33.0"
ctrlc = { version = "3.1.4", features = ["termination"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
flate2 = "1.0.13"
log = "0.4.8"
nom = "5.1.1"
rand = "0.7.3"
serde = "1.0.104"
serenity = "0.8.0"
typemap = "0.3.3"

[features]
default = ["exylobby"]
exylobby = []
ytp = []
