[package]
name = "sparky"
version = "3.3.0"
authors = ["Paul Blouët <paul@paulblouet.fr>"]
edition = "2018"

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.31"
base64 = "0.12.3"
bincode = "1.3.1"
boolinator = "2.4.0"
chrono = "0.4.11"
chrono-tz = "0.5.2"
clap = "2.33.1"
ctrlc = { version = "3.1.4", features = ["termination"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
fehler = "1.0.0"
flate2 = "1.0.16"
log = "0.4.8"
nom = "5.1.2"
rand = "0.7.3"
reqwest = "0.10.6"
serde = "1.0.114"
serde_json = "1.0.56"
serenity = "0.8.6"
typemap = "0.3.3"

[features]
default = ["prod"]
prod = []
test = []
