[package]
name = "sparky"
version = "4.0.0"
authors = ["Paul Blouët <paul.blouet@outlook.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
base64 = "0.12.3"
bincode = "1.3.1"
boolinator = "2.4.0"
chrono = "0.4.15"
chrono-tz = "0.5.2"
clap = "2.33.3"
ctrlc = { version = "3.1.6", features = ["termination"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
fehler = "1.0.0"
flate2 = "1.0.17"
log = "0.4.11"
nom = "5.1.2"
rand = "0.7.3"
reqwest = "0.10.8"
serde = "1.0.115"
serde_json = "1.0.57"
serenity = "0.8.7"
sparky_macros = { path = "./sparky_macros" }
typemap = "0.3.3"

[features]
default = ["prod"]
prod = []
test = []
